2009-03-03  Kaity G. B. <uberChick@uberChicGeekChick.Com>

	* src/{?}-network.c: network_get_image
		the system was using the basename of friends avatar urls for
		the name of the images that were being saved.  So I've added
		the friend's profile id as a prefix of the image name. I also
		changed it so that all image strings are automatically null
		terminated so the old checks were safly removed to improve
		efficancy.

	* src/{?}-parser.c & src/{?}-send-message-dialog.c:
		I removed unneeded #includes.

2009-03-01  Kaity G. B. <uberChick@uberChicGeekChick.Com>

	* ./*: forked from {?}.
		The changes below where submitted but most where not accepted
		& again the fact that I'm an artist & those programming are
		standard ignorant, arogant, engineer wanna be types.
		
		~shrug~ oh well I've learned my final lessons about wanting to
		join & contribute to existing OSS projects & the open source
		community.

	* directories: ./.svn, ./src/.svn, ./lib{?}/.svn, ./data/.svn,
	./data/glade/.svn, ./po/.svn, ./help/.svn, ./help/C/.svn
		All subversion trails are now removed.  I have to fork but I
		merge in others code especially if mine is unwanted.
	
	* src/{?}-app.c: removed unused objects.
		There were 3 methods where priv objects were being defined and
		initialized but never used.  So that's gone.

2009-02-29  Kaity G. B. <uberChick@uberChicGeekChick.Com>

	* src/{?}-network.c: {?}_network_sort_users
		I have added this so lists of friends and followers are now
		sorted alphabetically so friends can easily be found when
		sending direct messages or viewing their status.
	
	* src/{?}-network.c: {?}_network_make_users_list
				& network_cb_on_users
		Both methods now sort the GList they create by calling the
		above method, {?}_network_sort_users, using GTK's
		g_list_sort method.
	
2009-02-27  Kaity G. B. <uberChick@uberChicGeekChick.Com>

	* src/{?}-parser.c: {?}_parser_timeline
		I changed what is saved in the GtkListStore so that the user